app3/kube-manifests/03-UserMgmtWebApp-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-service
  labels: 
    app: usermgmt-webapp
spec:
  type: LoadBalancer
  selector:
    app: usermgmt-webapp
  ports: 
    - port: 8080
      targetPort: 8080
