app3/kube-manifests/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: learn-devops-clusterip-service
  labels:
    app: usermgmt-webapp
spec:
  type: ClusterIP
  selector:
    app: usermgmt-webapp
  ports:
    - port: 8080
      targetPort: 8080
