app3/kube-manifests/03-Ingress-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    
spec:
  rules:
  - host: wassupafrica.com
    http:
      paths:
      - path: /
        backend:
          serviceName: learn-devops-clusterip-service
          servicePort: 8080
  tls:
  - hosts:
    - wassupafrica.com
    secretName: wassupafrica-secret
